<resources>

    <string name="app_name">"Inventory, Stage 2"</string>

    <string name="empty_list_text">"<b>the inventory list is empty.</b>\n\n\nin order to add items to the database, click the plus button at the bottom right. then enter information using these examples as a guide:\n\nproduct\'s name:\n<i>super extra nice notebook</i>\n\nprice (no decimal points):\n<i>245</i>\n\nthe quantity:\n<i>278</i>\n\nsupplier name:\nfreddy\'s fabulous notebooks\n\nand their contact phone number:\n247.269.2154"</string>
    <string name="btn_list_sale">"sale"</string>
    <string name="list_pre_dollar">"$"</string>
    <string name="list_pre_qty">"qty: "</string>


    <string name="menu_delete_title">"delete"</string>
    <string name="menu_edit_title">"edit"</string>
    <string name="menu_accept_title">"accept"</string>
    <string name="menu_cancel_title">"cancel"</string>

    <string name="label_product_info">"product\ninformation"</string>
    <string name="label_supplier_info">"supplier\ninformation"</string>

    <string name="edit_hint_product_name">"product name"</string>
    <string name="edit_hint_product_price">"price"</string>
    <string name="edit_hint_quantity">"quantity"</string>
    <string name="edit_hint_supplier_name">"supplier name"</string>
    <string name="edit_hint_supplier_phone">"supplier phone number"</string>

    <string name="product_title_add_new">"add new product"</string>
    <string name="product_title_edit_current">"edit product"</string>
    <string name="product_title_view_current">"view product"</string>
    <string name="product_item_deleted">"product deleted from inventory"</string>
    <string name="product_save_insert_success">"new product saved successfully"</string>
    <string name="product_save_update_success">"product updated successfully"</string>

    <string name="err_intended_menu_state">"something's wrong with the intended state of the menu"</string>
    <string name="err_provider_query_unknown_uri">"cannot query unknown URI"</string>
    <string name="err_provider_mime_unknown_uri">"unknown URI"</string>
    <string name="err_provider_mime_match">"with match id"</string>
    <string name="err_provider_insert_not_suppt">"insertion is not supported for"</string>
    <string name="err_provider_insert_fail">"failed to insert for"</string>
    <string name="err_provider_update_not_suppt">"updating is not supported for"</string>
    <string name="err_provider_delete_not_suppt">"deleting is not supported for"</string>
    <string name="err_product_deleting">"error deleting inventory row"</string>
    <string name="err_product_save_empty_fields">"you have to fill out each field on this screen"</string>
    <string name="err_product_save_error_saving">"there was an error saving this product"</string>
    <string name="err_product_save_updating">"there was an error updating this product"</string>
    <string name="err_main_sale_btn_saving">"error with updating the product quantity/sale"</string>
    <string name="err_max_qty_exceeded">"surely you don't have more than 300,000 of these?\nplease enter a value less than/equal to 300,000"</string>
    <string name="err_max_price_exceeded">"sorry, you have exceeded the max price limit.\nplease enter a value less than/equal to $10,000,000"</string>
    <string name="err_number_input_too_large">"the number you have input is too large. max for price is $10,000,000 and for quantity is 300,000"</string>

    <string name="dialog_unsaved_changes_q">"discard your changes and quit editing?"</string>
    <string name="dialog_unsaved_discard">"discard"</string>
    <string name="dialog_unsaved_keep_editing">"keep editing"</string>
    <string name="dialog_delete_row_q">"delete this product?"</string>
    <string name="dialog_delete_del">"delete"</string>
    <string name="dialog_delete_cancel">"cancel"</string>

    <string name="info_no_changes_made">"no changes were made"</string>
    <string name="info_sale_successful">"sale completed"</string>

</resources>
