<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fipplippippity.kevin.inventorystage2.ProductActivity">

    <!--https://material.io/tools/icons/?search=delete&icon=delete_outline&style=outline-->
    <item
        android:id="@+id/menu_product_delete"
        android:icon="@drawable/outline_delete_outline_white_48dp"
        android:title="@string/menu_delete_title"
        app:showAsAction="always" />

    <!--https://material.io/tools/icons/?search=edit&icon=edit&style=outline-->
    <item
        android:id="@+id/menu_product_edit"
        android:icon="@drawable/outline_edit_white_48dp"
        android:title="@string/menu_edit_title"
        app:showAsAction="always" />

    <!--https://material.io/tools/icons/?icon=clear&style=outline-->
    <item
        android:id="@+id/menu_product_cancel"
        android:icon="@drawable/outline_clear_white_48dp"
        android:title="@string/menu_cancel_title"
        app:showAsAction="always" />

    <!--https://material.io/tools/icons/?search=check&icon=check&style=outline-->
    <item
        android:id="@+id/menu_product_accept"
        android:icon="@drawable/outline_check_white_48dp"
        android:title="@string/menu_accept_title"
        app:showAsAction="always" />
</menu>